--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
     <head>
-        <title>Jubilee Austen | Portfolio</title>
+        <title>LaShana Breland | Portfolio</title>
     </head>
     <body>
         <header>
             <div>
                 <div>
-                    <h1>Jubilee Austen</h1>
+                    <h1>LaShana Breland</h1>
                 </div>
                 <div>
                     <nav>
@@ -16,8 +16,8 @@
                         <li><a href="#work">Work</a></li>
                         <li><a href="#contact">Contact</a></li>
                         </ul>
-                    </nav>  
-                </div> 
+                    </nav>
+                </div>
                 <h2><span>Hi,</span> I'm a developer that loves clean & elegant code.</h2>
             </div>
         </header>
