--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <header>
             <div>
                 <div>
-                    <h1>Jubilee Austen</h1>
+                    <h1>LaShana Breland</h1>
                 </div>
                 <div>
                     <nav>
