--- a/index-copy.html
+++ b/index-copy.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
     <head>
-        <title>Jubilee Austen | Portfolio</title>
+        <title>LaShana Breland | Portfolio</title>
     </head>
     <body>
         <header>
             <div>
                 <div>
-                    <h1>Jubilee Austen</h1>
+                    <h1>LaShana Breland</h1>
                 </div>
                 <div>
                     <nav>
