--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
         <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,900" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet"  type="text/javascript" href="script.js">
     </head>
     <body>
         <header>
@@ -15,7 +16,7 @@
         </header>
 
         <main>
-            <section>
+            <section class="middle">
               <div id="HRSC_Gold"><h1><span>HR</span> Service Center</h1></div>
             </section>
 
@@ -23,22 +24,24 @@
               <div class="container">
                   <div class="form_buttons">
 
-                      <button class="standard-button grow"><a href="#" data-text="Used for New Applicants, or those returning"> New Hire/Rehire Form</a></button>
-                      <button class="standard-button grow"><a href="#"> Employee Maintenance Form</a></button>
-                      <button class="standard-button grow"><a href="#"> Termination Form</a></button>
+                      <a id=new class="standard-button grow new" type="submit" onclick="href='http://hrservicecenter.yourbenefitsmanager.com/paf.php'">New Hire/Rehire Form</a>
+                      <a type="submit" onclick="href='http://hrservicecenter.yourbenefitsmanager.com/maintenance.php'"class="standard-button grow maint"> Employee Maintenance Form</a>
+                      <a type="submit" onclick="href='http://hrservicecenter.yourbenefitsmanager.com/termination.php'"class="standard-button grow term">Termination Form</a>
               </div>
             </section>
 
             <footer>
+            <div class="bottom">
               <div class="address">
                   <p> 45 Research Way, Suite 106<br>East Setauket, NY 11733</p>
-                </div>
+              </div>
                 <div class="contact">
                   <p><span>Phone:</span> 800.838.8886 (8:30 am - 5:30pm)<br>
                       <span>Fax:</span> 631.982.7193 <br>
-                      <a href="hrservicecenter@yourbenefitsmanager.com">Hrservicecenter@yourbenefitsmanager.com</a>
+                      <a href="mailto:hrservicecenter@yourbenefitsmanager.com">Hrservicecenter@yourbenefitsmanager.com</a>
                   </p>
-                <div>
+                </div>
+              </div>
             </footer>
         </main>
     </body>
