bottom border and padding changes

--- a/index.html
+++ b/index.html
@@ -20,17 +20,19 @@
               <div id="HRSC_Gold"><h1><span>HR</span> Service Center</h1></div>
             </section>
 
-            <section>
+
               <div class="container">
                   <div class="form_buttons">
 
                       <a id=new class="standard-button grow new" type="submit" onclick="href='http://hrservicecenter.yourbenefitsmanager.com/paf.php'">New Hire/Rehire Form</a>
-                      <a type="submit" onclick="href='http://hrservicecenter.yourbenefitsmanager.com/maintenance.php'"class="standard-button grow maint"> Employee Maintenance Form</a>
-                      <a type="submit" onclick="href='http://hrservicecenter.yourbenefitsmanager.com/termination.php'"class="standard-button grow term">Termination Form</a>
+                      <a type="submit" onclick="href='http://hrservicecenter.yourbenefitsmanager.com/maintenance.php'" class="standard-button grow maint"> Employee Maintenance Form</a>
+                      <a type="submit" onclick="href='http://hrservicecenter.yourbenefitsmanager.com/termination.php'" class="standard-button grow term">Termination Form</a>
+                    </div>
               </div>
-            </section>
+
 
             <footer>
+            <div class="footer-green">
             <div class="bottom">
               <div class="address">
                   <p> 45 Research Way, Suite 106<br>East Setauket, NY 11733</p>
@@ -42,6 +44,7 @@
                   </p>
                 </div>
               </div>
+            </div>
             </footer>
         </main>
     </body>
